--- a/index.html
+++ b/index.html
@@ -165,21 +165,22 @@
     </style>
   </head>
   <body>
-    <header class="navbar" style="padding: 1rem 2rem; background-color: #ffffff; box-shadow: 0 1px 3px rgba(0,0,0,0.05);">
-      <div class="container nav-wrapper" style="display: flex; justify-content: flex-start; align-items: center; max-width: 1200px; margin: 0 auto;">
-        <a href="#home" class="logo" style="margin-right: auto;">
-          <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 56px;" />
-        </a>
-        <nav class="nav-menu">
-          <ul style="display: flex; gap: 1.5rem; list-style: none; margin: 0; padding: 0;">
-            <li><a href="#solution">Solution</a></li>
-            <li><a href="#packages">Packages</a></li>
-            <li><a href="#why">Why Qorra</a></li>
-            <li><a href="#contact" class="btn primary-btn cta-btn">Get Started</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+   <header class="navbar" style="background-color: #ffffff; box-shadow: 0 1px 4px rgba(0,0,0,0.06); border-bottom: 1px solid #e5e7eb; padding: 1rem 0;">
+  <div class="container" style="max-width: 1200px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between; padding: 0 2rem;">
+    <a href="#home" class="logo" style="display: flex; align-items: center;">
+      <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 72px; object-fit: contain;" />
+    </a>
+    <nav class="nav-menu">
+      <ul style="display: flex; gap: 1.75rem; list-style: none; margin: 0; padding: 0; align-items: center;">
+        <li><a href="#solution" style="text-decoration: none; color: #111827;">Solution</a></li>
+        <li><a href="#packages" style="text-decoration: none; color: #111827;">Packages</a></li>
+        <li><a href="#why" style="text-decoration: none; color: #111827;">Why Qorra</a></li>
+        <li><a href="#contact" class="btn primary-btn cta-btn">Get Started</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
 
     <main>
       <!-- Hero -->
