--- a/index.html
+++ b/index.html
@@ -5,163 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Qorra AI | Unlock Time & Growth</title>
     <link rel="stylesheet" href="styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <style>
-      /* Base Styling */
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: 'Inter', sans-serif;
-        background-color: #0a0a0a;
-        color: #eaeaea;
-        line-height: 1.6;
-        scroll-behavior: smooth;
-      }
-
-      a {
-        color: inherit;
-        text-decoration: none;
-      }
-
-      /* Navbar */
-      .navbar {
-        background-color: #0a0a0a;
-        padding: 1rem 2rem;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid #1f1f1f;
-        position: sticky;
-        top: 0;
-        z-index: 999;
-      }
-
-      .logo img {
-        height: 50px;
-      }
-
-      .nav-menu ul {
-        display: flex;
-        list-style: none;
-        gap: 2rem;
-      }
-
-      .nav-menu a {
-        font-weight: 500;
-        transition: color 0.3s ease;
-      }
-
-      .nav-menu a:hover {
-        color: #00b4d8;
-      }
-
-      .btn {
-        background-color: #00b4d8;
-        border: none;
-        padding: 0.6rem 1.2rem;
-        border-radius: 12px;
-        color: #fff;
-        font-weight: 600;
-        transition: background-color 0.3s ease;
-      }
-
-      .btn:hover {
-        background-color: #009bb8;
-      }
-
-      /* Hero */
-      .hero {
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        padding: 0 2rem;
-        background: linear-gradient(to bottom, #0a0a0a, #121212);
-      }
-
-      .hero h1 {
-        font-size: 3rem;
-        font-weight: 700;
-        max-width: 800px;
-      }
-
-      .hero p {
-        font-size: 1.25rem;
-        margin: 1rem 0 2rem;
-        max-width: 600px;
-        color: #cfcfcf;
-      }
-
-      .hero img {
-        max-width: 500px;
-        width: 100%;
-        margin-top: 2rem;
-      }
-
-      /* Sections */
-      section {
-        padding: 6rem 2rem;
-        max-width: 1100px;
-        margin: auto;
-      }
-
-      section:nth-child(even) {
-        background-color: #101010;
-      }
-
-      h2 {
-        font-size: 2rem;
-        font-weight: 700;
-        margin-bottom: 1rem;
-      }
-
-      p {
-        font-size: 1.125rem;
-        color: #cccccc;
-      }
-
-      /* Contact */
-      #contact a {
-        color: #00b4d8;
-        font-weight: 600;
-      }
-
-      /* Mobile */
-      @media (max-width: 768px) {
-        .nav-menu ul {
-          flex-direction: column;
-          gap: 1rem;
-        }
-
-        .hero h1 {
-          font-size: 2.2rem;
-        }
-
-        .hero p {
-          font-size: 1rem;
-        }
-      }
-    </style>
+    <script defer src="script.js"></script>
   </head>
   <body>
     <header class="navbar">
-      <a href="#home" class="logo">
-        <img src="qorra-ai-logo.png" alt="Qorra AI logo" />
-      </a>
-      <nav class="nav-menu">
-        <ul>
-          <li><a href="#solution">Solution</a></li>
-          <li><a href="#packages">Packages</a></li>
-          <li><a href="#why">Why Qorra</a></li>
-          <li><a href="#contact" class="btn">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="container nav-wrapper">
+        <a href="#home" class="logo">
+          <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 60px;" />
+        </a>
+        <nav class="nav-menu">
+          <ul>
+            <li><a href="#solution">Solution</a></li>
+            <li><a href="#packages">Packages</a></li>
+            <li><a href="#why">Why Qorra</a></li>
+            <li><a href="#contact" class="btn primary-btn">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <section class="hero" id="home">
@@ -172,7 +32,7 @@
 
     <section id="solution">
       <h2>The Solution</h2>
-      <p>We combine your human insight with our automation expertise to remove the bottlenecks, follow up with leads automatically, and turn wasted hours into growth.</p>
+      <p>We combine your human insight with our automation expertise to remove bottlenecks, follow up with leads automatically, and turn wasted hours into growth.</p>
     </section>
 
     <section id="packages">
