--- a/index.html
+++ b/index.html
@@ -9,40 +9,87 @@
   </head>
   <body>
     <header class="navbar">
-      <div class="nav-wrapper">
+      <div class="container nav-wrapper">
         <a href="#home" class="logo">
-          <img src="qorra-ai-logo.png" alt="Qorra AI logo" />
+          <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 60px;" />
         </a>
         <nav class="nav-menu">
           <ul>
+            <li><a href="#problem">Problem</a></li>
+            <li><a href="#target">Target Market</a></li>
             <li><a href="#solution">Solution</a></li>
             <li><a href="#packages">Packages</a></li>
             <li><a href="#why">Why Qorra</a></li>
-            <li><a href="#contact" class="btn primary-btn">Get Started</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
       </div>
     </header>
 
-    <section class="hero" id="home">
-      <div class="hero-content">
-        <div class="hero-image">
-          <img src="assets/robot-and-man.png" alt="Automation robot visual" />
+    <!-- Hero Section -->
+    <section id="home" class="hero-section">
+      <div class="container hero-wrapper">
+        <div class="hero-logo">
+          <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 100px;" />
         </div>
-        <div class="hero-text">
-          <h1>Unlock Your Time & Growth</h1>
-          <p>High-impact AI automation designed for established businesses.</p>
-          <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
+        <div class="hero-content">
+          <h1>Unlock Your Growth with AI Automation</h1>
+          <p>Stop wasting time. Start scaling smarter with Qorra.</p>
         </div>
       </div>
     </section>
 
-    <section class="section-light" id="solution">
-      <h2>The Problem</h2>
-      <p>Successful business owners are falling behind because they don’t have time to learn or implement AI. Qorra solves that.</p>
+    <!-- Problem Section -->
+    <section id="problem" class="section">
+      <div class="container">
+        <h2>The Problem</h2>
+        <p>Most businesses are stuck doing repetitive, manual tasks that eat up time and slow down growth. AI tools are powerful—but without setup and strategy, they go unused.</p>
+      </div>
     </section>
 
-    <!-- Add other sections here -->
+    <!-- Target Market Section -->
+    <section id="target" class="section">
+      <div class="container">
+        <h2>Who Qorra Is For</h2>
+        <p>Qorra is built for professionals, coaches, and service-based business owners who want to automate without the headache. If you're drowning in busywork or struggling to scale, we built this for you.</p>
+      </div>
+    </section>
 
+    <!-- Solution Section -->
+    <section id="solution" class="section">
+      <div class="container">
+        <h2>Our Solution</h2>
+        <p>Qorra sets up your AI workflows for you—fast. We use automation tools like Make.com, Tally, and custom AI agents to remove manual tasks and give you time back. You’ll go from chaos to streamlined systems with zero learning curve.</p>
+      </div>
+    </section>
+
+    <!-- Packages Section -->
+    <section id="packages" class="section">
+      <div class="container">
+        <h2>Our Packages</h2>
+        <ul>
+          <li><strong>Starter:</strong> 1 automated workflow, perfect for solopreneurs</li>
+          <li><strong>Pro:</strong> Up to 3 workflows with AI agents + dashboard reporting</li>
+          <li><strong>Custom:</strong> Fully tailored automations built for your exact needs</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Why Qorra Section -->
+    <section id="why" class="section">
+      <div class="container">
+        <h2>Why Qorra</h2>
+        <p>We don’t just hand you tools—we set up automations that work from day one. Our systems save hours every week and unlock growth you didn’t know was possible. Plus, we make it easy even if you're not tech-savvy.</p>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section">
+      <div class="container">
+        <h2>Contact Us</h2>
+        <p>Interested in working with us? Reach out today and let's unlock your growth with automation.</p>
+        <a href="mailto:ryannelsoncosprings@gmail.com">ryannelsoncosprings@gmail.com</a>
+      </div>
+    </section>
   </body>
 </html>
